# Deadliner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.ru.md  README_UI_RU_EN.md  generate_ts.py  patch_dict.py
.github/workflows/: release.yml
build_test/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  deadliner  deadliner_domain_tests  deadliner_repository_tests
build_test/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_test/Testing/Temporary/: CTestCostData.txt
build_test/deadliner_autogen/: deps
build_test/deadliner_core_autogen/: deps  mocs_compilation.cpp
build_test/deadliner_core_autogen/46YCYQ5ZBT/: moc_profiles_page.cpp
build_test/deadliner_core_autogen/BG6C5B6FB3/: moc_onboarding_dialog.cpp
build_test/deadliner_core_autogen/ISMKEKEPX5/: moc_app_controller.cpp
build_test/deadliner_core_autogen/V365BLQOYJ/: moc_settings_page.cpp
build_test/deadliner_core_autogen/YLKIB4UJZP/: moc_today_page.cpp
build_test/deadliner_core_autogen/YPKJ5OE7LN/: moc_event_dialog.cpp  moc_main_window.cpp  moc_profile_dialog.cpp  moc_reminder_dialog.cpp
build_test/deadliner_domain_tests_autogen/: deps  moc_predefs.h
build_test/deadliner_repository_tests_autogen/: deps
build_test/deadliner_repository_tests_autogen/include/: test_repository.moc
deadliner_fixes/: patch_dict.py
docs/: reminder_app_plan.md  ui_review.md  ui_spec.md
packaging/linux/: PKGBUILD  deadliner.desktop
packaging/windows/: installer.nsi
resources/: icons.qrc
resources/i18n/: deadliner_en.ts  deadliner_ru.ts
src/: CMakeLists.txt  main.cpp
src/app/: app_controller.cpp  app_controller.h
src/application/: services.cpp  services.h
src/domain/: logic.cpp  logic.h  models.h
src/infrastructure/logging/: logging.cpp  logging.h
src/infrastructure/platform/: autostart_manager.cpp  autostart_manager.h
src/infrastructure/settings/: settings_store.cpp  settings_store.h
src/infrastructure/storage/: repository.cpp  repository.h
src/ui/: break_window.cpp  break_window.h  event_dialog.cpp  event_dialog.h  main_window.cpp  main_window.h  profile_dialog.cpp  profile_dialog.h  reminder_dialog.cpp  reminder_dialog.h  tray_controller.cpp  tray_controller.h
src/ui/common/: display_strings.cpp  display_strings.h  navigation.h
src/ui/events/: events_page.cpp  events_page.h
src/ui/i18n/: language_manager.cpp  language_manager.h
src/ui/onboarding/: onboarding_dialog.cpp  onboarding_dialog.h
src/ui/overdue/: overdue_page.cpp  overdue_page.h
src/ui/profiles/: profiles_page.cpp  profiles_page.h
src/ui/settings/: settings_page.cpp  settings_page.h  theme_manager.cpp  theme_manager.h
src/ui/statistics/: statistics_page.cpp  statistics_page.h
src/ui/today/: today_page.cpp  today_page.h
src/ui/widgets/: empty_state_widget.cpp  empty_state_widget.h
tests/: test_app_controller.cpp  test_domain.cpp  test_repository.cpp  test_scheduler.cpp
